# zk-sudoku-prover

./: .gitignore  Cargo.toml  download_dataset.py  readme.md
data/: validation.csv
examples/: quick_dev.rs
src/: lib.rs
src/crypto/: colour_shuffle.rs  commitment.rs  mod.rs
src/graph/: mod.rs
src/sodoku/: cell.rs  grid.rs  mod.rs  point.rs  position.rs  set.rs  value.rs
src/zkproof/: mod.rs  protocol.rs  prover.rs  types.rs  verifier.rs
