[package]
name = "zk-sudoku-prover"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
ahash = "0.8.11"
blake3 = "1.7.0"
bytes = "1.10.1"
itertools = "0.14"
num-traits = "0.2.19"
petgraph = "0.7.1"
rand = "0.9.0"
sha2 = "0.10"
thiserror = "2.0"
