[package]
name = "zk-sudoku-prover"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "zk-sudoku-prover"
path = "src/main.rs"

[dependencies]
blake3 = "1.8"
bytes = "1.10"
itertools = "0.14"
num-traits = "0.2"
petgraph = "0.8"
rand = "0.9"
thiserror = "2.0"


[workspace.lints.clippy]
multiple_crate_versions = "allow"
# But allow some pedantic lints that might be too strict
module_name_repetitions = "allow"
similar_names = "allow"
too_many_lines = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
dbg-macro = "warn"
unreadable_literal = "allow"

#must_use_candidate = "allow" # --fix fixes this
return_self_not_must_use = "allow" # --fix does not fix this
cast_possible_truncation = "allow"

# Specific lints to deny (treat as errors)
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
#unwrap_used = "deny"

#unreadable_literal = "warn"
redundant_else = "warn"
needless_pass_by_value = "warn"


# Nursery lints (experimental but useful)
use_self = "warn"
option_if_let_else = "warn"
redundant_pub_crate = "warn"


# Enable Clippy lints for the entire workspace
all = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
[workspace.lints.rust]
# Standard Rust lints
#smissing_docs = "warn"
unsafe_code = "forbid"
rust_2018_idioms = { level = "warn", priority = -1 }
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"
